k8s/overlays/prod/ingress-patch.yaml
# Production Ingress - Uses bloomhealth.us domain
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloom-ingress
  namespace: bloom-prod
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "bloom-prod-certificate"
    networking.gke.io/v1beta1.FrontendConfig: "bloom-frontend-config"
    kubernetes.io/ingress.global-static-ip-name: "bloom-prod-ip"
spec:
  rules:
    - host: bloomhealth.us
      http:
        paths:
          - path: /socket.io/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: bloom-socket
                port:
                  number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: bloom-app
                port:
                  number: 80
